# gtfstk

./: ..pre-commit-config.yaml.swp  ..pre-commit-hooks.yaml.swp  .Pipfile.swp  .coverage  .gitignore  .gitignore.orig  .travis.yml  CHANGELOG.rst  CHANGES.rst  GTFS toolkit utils.ipynb  MANIFEST  MANIFEST.in  Pipfile  Pipfile.lock.orig  README.md  README.rst  README.rst.orig  Untitled0.ipynb  develop_requirements.txt  feed.py  gtfs_toolkit_examples.ipynb  poetry.lock.orig  pyproject.toml  requirements.txt  setup.py  utils.py  validate-stats  validation-results.html
.mypy_cache/3.6/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  (+40 more)
data/: route_110-423.geojson
docs/: calculator.rst  cleaner.rst  conf.py  constants.rst  feed.rst  index.rst  introduction.rst  modules.rst  plotter.rst  utilities.rst  utils.rst  validator.rst
examples/: Untitled0.ipynb  bad_segments_in_gtfs.csv  examples-Copy0.ipynb  examples.html  examples.ipynb  gtfs_toolkit_examples.ipynb  gtfs_toolkit_tests.ipynb  tests.ipynb  tmp.csv
gtfs_tk/: feed.py  utils.py
gtfs_toolkit/: feed.py  utils.py
gtfstk/: .coverage  __init__.py  calculator.py  calendar.py  cleaner.py  cleaners.py  constants.py  feed.py  helpers.py  miscellany.py  plotter.py  routes.py  shapes.py  stop_times.py  stops.py  trips.py  utilities.py  utils.py  validator.py  validators.py
gtfstk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ipynb/: examples.ipynb  plotter_prototyping.ipynb  prototyping.ipynb  temp.csv  tests.ipynb
test/: tests.py
tests/: context.py  temp.csv  test_calculator.py  test_calendar.py  test_cleaner.py  test_cleaners.py  test_feed.py  test_helpers.py  test_miscellany.py  test_routes.py  test_shapes.py  test_stop_times.py  test_stops.py  test_trips.py  test_utilities.py  test_utils.py  test_validator.py  test_validators.py  tests.ipynb  tests.py
(+159 files in other folders)
