[tool.poetry]
name = "gtfstk"
version = "9.5.0"
description = "A Python 3.6+ library for analyzing GTFS feeds."
authors = ["Alex Raichev <araichev@mrcagney.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/mrcagney/gtfstk"
documentation = "https://mrcagney.github.io/gtfstk_docs"
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.23.4"
shapely = "^1.6"
pycountry = "^18.5"
utm = "^0.4.2"
json2table = "^1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pytest = "^4.0"
sphinx = "^1.8"
pre-commit = "^1.12"
black = "=18.9b0"
publish_sphinx_docs = "^1.0"
geopandas = "^0.4.0"
rtree = "^0.8.3"
folium = "^0.7.0"
matplotlib = "^3.0"
plotnine = "^0.5.1"
mypy = "^0.670.0"

[tool.black]
line-length = 79
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

