[tool.poetry]
name = "gtfstk"
version = "10.0.6"
description = "A Python 3.6+ library for analyzing GTFS feeds."
authors = ["Alex Raichev <araichev@mrcagney.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/mrcagney/gtfstk"
documentation = "https://mrcagney.github.io/gtfstk_docs"
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7"
pandas = "<1"
shapely = "^1.6"
pycountry = "^18.5"
utm = "^0.4.2"
json2table = "^1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pytest = "^4.0"
sphinx = "^1.8"
pre-commit = "^1.12"
black = "=19.3b0"
publish_sphinx_docs = "^1.0"
geopandas = "<1"
rtree = "<1"
folium = "<1"
matplotlib = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

